Fix:Did some small refactorings (#25)